Squashed commit of the following:
commit efcefee09de737f8a22ce1bd3c153d2bd91d5eec
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sun May 28 06:00:42 2017 -0400

    readme update

commit 9b0b51e4ec999450e582345225ffd4fe63a9255f
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Tue May 16 08:37:18 2017 -0400

    ui-customization notes in readme

commit eca2a013c1c77ea5ec9522781ced2b3fdf503b13
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Tue May 16 08:11:25 2017 -0400

    fixing ui header styles in very small viewports

commit 18ddb28de91d04de7a16b1c6d3aa8596effba3db
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Mon May 15 09:41:26 2017 -0400

    fixing ui header styles in very small viewports

commit feddcf0f346d2a23767b4ce3592a59394a7e4b28
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Mon May 15 09:04:49 2017 -0400

    fixing ui header styles in very small viewports

--- a/styles/ui.css
+++ b/styles/ui.css
@@ -19,6 +19,7 @@
   left: 0;
   z-index: 1;
   width: 100%;
+  min-width: 320px;
   /**
   * All lists appearing in the header
   */
@@ -296,7 +297,6 @@
   content: "\e605";
 }
 .sg-control .sg-input {
-  padding: 0.1em;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -ms-transition: all 0.2s ease-out;
@@ -313,7 +313,7 @@
   font-size: 70%;
   line-height: 1;
   color: #808080;
-  padding: 0.75em 1em;
+  padding: 1em 1em 0;
 }
 .sg-current-size:hover .sg-input {
   background: #999;
@@ -322,15 +322,6 @@
 @media all and (min-width: 64em) {
   .sg-current-size {
     float: left;
-  }
-}
-
-.sg-size {
-  width: 135px;
-}
-@media all and (min-width: 48em) {
-  .sg-size {
-    width: auto;
   }
 }
 
@@ -359,18 +350,26 @@
   border: 0;
   padding: 0;
 }
-
+#sg-form > * {
+  display: inline-block;
+}
 .sg-input {
   margin: -2px 0 0 0;
-  padding: 0;
+  padding: 0 0 1px;
   border: 0;
   background-color: #222;
   color: gray;
-  width: 25px;
+  height: 12px;
   text-align: right;
 }
+.sg-size-px {
+  width: 30px;
+}
+.sg-size-em {
+  width: 35px;
+}
 @media all and (min-width: 48em) {
-  .sg-input {
+  .sg-size-px {
     width: 35px;
   }
 }
