Squashed commit of the following:
commit 41f6ff2532b417ecc2764114d47506f6347f5c59
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Aug 4 21:06:46 2018 -0400

    license

commit 2c9cc16991ff45298fc0517e9704b0e6070f7664
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Tue Jul 31 08:18:37 2018 -0400

    simplifying annotations

commit 94f686a321d8adda384ac03d84e22034a6d329c1
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Mon Jul 30 11:10:43 2018 -0400

    removing unnecessary JSON.stringifies

commit 47b675e1dba6ca8e29001fca79e5a76002c70d2f
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Mon Jul 30 10:55:11 2018 -0400

    DataSaver as a class

commit ad3d5c6949487959792492342e7144f4101b8626
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 14:37:47 2018 -0400

    warning edge ctrl+shift+l users

commit 89fb19d9e80392a28bf76bbb25e57a77431d1ae2
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 13:52:45 2018 -0400

    improved cmd+a/ctrl+a behavior

commit 01ec4a42a97fe63952e205c4efcf8f4f1f08cad7
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 13:31:11 2018 -0400

    improving pattern-finder keyboard shortcut

commit 4bef44aef00b161319e3435ff1fde32bebf38cea
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 13:23:36 2018 -0400

    improving pattern-finder keyboard shortcut

commit 7c0f5e8140bcead6470f26184c22769eee514c28
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 12:27:53 2018 -0400

    replacing jwerty with mousetrap

commit 0de33ddf53ba3df512a167c598ee58ff754634c3
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 11:49:58 2018 -0400

    correct focus and blur on sg toolbar actions

commit e41f03ad5b763a9a094eeb86398bd8d7e8b7b961
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 10:57:12 2018 -0400

    working esc shortcut key behavior

commit 427777ec0293f978843fed75e8c41cd0965bfcf4
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Jul 28 09:54:26 2

--- a/styles/ui.css
+++ b/styles/ui.css
@@ -85,7 +85,7 @@
 * Accordions are dropdowns used for the primary nav and
 * tools dropdowns.
 */
-.sg-acc-handle:after {
+.sg-acc-handle::after {
   content: '▼';
   color: rgba(255, 255, 255, 0.25);
   display: inline-block;
@@ -97,18 +97,18 @@
           transition: all 0.1s ease-out;
 }
 @media all and (min-width: 42em) {
-  .sg-acc-handle:after {
+  .sg-acc-handle::after {
     float: none;
   }
 }
-.sg-acc-handle:hover:after, .sg-acc-handle:focus:after {
+.sg-acc-handle:hover::after, .sg-acc-handle:focus::after {
   color: #808080;
 }
 .sg-acc-handle.active {
   color: #fff;
   background: #222;
 }
-.sg-acc-handle.active:after {
+.sg-acc-handle.active::after {
   top: -2px;
   color: #808080;
   -webkit-transform: rotate(180deg);
@@ -197,7 +197,7 @@
 /**
 * Pattern States that appear in the dropdown nav
 */
-.sg-nav .sg-pattern-state:before {
+.sg-nav .sg-pattern-state::before {
   margin-top: -4px;
   margin-bottom: 0;
   margin-left: -4px;
@@ -260,6 +260,10 @@
   padding: 0.5rem 0.5rem;
 }
 
+.sg-checklist .sg-checklist-icon::before {
+  margin-right: 0.4em;
+}
+
 .sg-icon-search, .sg-icon-cog, .sg-checkbox.active, .sg-checkbox, .sg-icon-file, .sg-icon-link, .sg-icon-keyboard, .sg-icon-eye {
   font-family: 'icomoon';
   speak: none;
@@ -288,12 +292,11 @@
   right: 0;
 }
 
-.sg-checkbox:before {
+.sg-checkbox::before {
   content: "\e606";
   display: inline-block;
-  margin-right: 0.4em;
 }
-.sg-checkbox.active:before {
+.sg-checkbox.active::before {
   content: "\e605";
 }
 .sg-control .sg-input {
@@ -362,23 +365,15 @@
   height: 12px;
   text-align: right;
 }
-.sg-size-px {
+#sg-size-px {
   width: 30px;
 }
-.sg-size-em {
+#sg-size-em {
   width: 35px;
 }
 @media all and (min-width: 48em) {
-  .sg-size-px {
+  #sg-size-px {
     width: 35px;
-  }
-}
-#sg-size-mq {
-  display: none;
-}
-@media all and (min-width: 72em) {
-  #sg-size-mq {
-    display: block;
   }
 }
 #sg-find {
@@ -386,7 +381,7 @@
   text-transform: lowercase;
 }
 
-.sg-icon-search:before {
+.sg-icon-search::before {
   content: "\e600";
   font-size: 85%;
 }
@@ -448,25 +443,23 @@
 .tt-suggestion p {
   margin: 0;
 }
-.sg-icon-eye:before {
+.sg-icon-eye::before {
   content: "\e60b";
 }
 
-.sg-icon-link:before {
+.sg-icon-link::before {
   content: "\e608";
-  margin-right: 0.4em;
 }
-.sg-icon-cog:before {
+.sg-icon-cog::before {
   content: "\e601";
 }
 
-.sg-icon-keyboard:before {
+.sg-icon-keyboard::before {
   content: "\e609";
 }
 
-.sg-icon-file:before {
+.sg-icon-file::before {
   content: "\e607";
-  margin-right: 0.4em;
 }
 /**
 * Viewport wrapper div
@@ -510,10 +503,6 @@
   overflow-y: auto;
   overflow-x: hidden;
 }
-#sg-gen-container.hay-mode {
-  -webkit-transition: all 40s linear;
-          transition: all 40s linear;
-}
 
 /**
 * Viewport iframe
@@ -531,15 +520,6 @@
   left: 0;
   right: 0;
   background-color: white;
-  /**
-  * Hay Mode transition
-  * 1) Hay Mode (disabled by default) starts with the smallest
-  * viewport then slowly expands http://bradfrost.com/blog/post/ish-2-0/
-  */
-}
-#sg-viewport.hay-mode {
-  -webkit-transition: all 40s linear;
-          transition: all 40s linear;
 }
 
 /**
@@ -659,7 +639,7 @@
   padding: 0;
 }
 
-#sg-code-tabs li {
+.sg-code-title {
   float: left;
   background-color: #333;
   font-size: 1.3em;
