--- a/styles/ui.css
+++ b/styles/ui.css
@@ -33,11 +33,11 @@
   list-style: none;
 }
 .sg-header a {
-  font-size: 70%;
+  font-size: 0.7em;
   color: #808080;
   text-decoration: none;
   line-height: 1;
-  padding: 0.982em 0.3571em 0.982em 0.4018em;
+  padding: 0.9375em 0.3571em 0.9375em 0.4018em;
   -webkit-transition: background 0.1s ease-out;
           transition: background 0.1s ease-out;
   -webkit-transition: color 0.1s ease-out;
@@ -58,12 +58,12 @@
   text-transform: uppercase;
   z-index: 2;
 }
-@media all and (min-width: 60.01em) {
+@media all and (min-width: 768px) {
   .sg-nav-toggle {
     display: none;
   }
 }
-@media all and (max-width: 60em) {
+@media all and (max-width: 767px) {
   .sg-nav-container {
     overflow: hidden;
     max-height: 0;
@@ -74,7 +74,7 @@
     max-height: 50em;
   }
 }
-@media all and (min-width: 42.01em) and (max-width: 60em) {
+@media all and (min-width: 768px) and (max-width: 1024px) {
   .sg-nav-container.active {
     overflow: visible;
     max-height: 50em;
@@ -96,7 +96,7 @@
   -webkit-transition: all 0.1s ease-out;
           transition: all 0.1s ease-out;
 }
-@media all and (min-width: 42em) {
+@media all and (min-width: 768px) {
   .sg-acc-handle::after {
     float: none;
   }
@@ -178,7 +178,7 @@
 .sg-nav > li {
   cursor: pointer;
 }
-@media all and (min-width: 42em) {
+@media all and (min-width: 768px) {
   .sg-nav > li {
     border-bottom: 0;
     float: left;
@@ -232,25 +232,10 @@
 .sg-control > li {
   float: left;
 }
-@media all and (min-width: 48em) {
+@media all and (min-width: 768px) {
   .sg-control > li {
     border-bottom: 0;
     border-left: 1px solid rgba(255, 255, 255, 0.05);
-  }
-}
-
-.sg-control-trigger {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-}
-@media all and (min-width: 48em) {
-  .sg-control-trigger {
-    border: 0;
-  }
-}
-@media all and (min-width: 72em) {
-  .sg-control-trigger {
-    float: left;
-    width: 6em;
   }
 }
 
@@ -258,7 +243,7 @@
   display: block;
   width: auto;
   font-size: 1rem;
-  padding: 0.5rem 0.25rem 0 0.28125rem;
+  padding: 0.5rem 0.25rem 0.5rem 0.28125rem;
 }
 
 .sg-checklist .sg-checklist-icon::before {
@@ -314,7 +299,7 @@
 }
 
 .sg-current-size {
-  font-size: 70%;
+  font-size: 0.7em;
   line-height: 1;
   color: #808080;
   padding: 0.982em 0.3571em 0 0.4018em;
@@ -323,7 +308,7 @@
   background: #999;
   color: #000;
 }
-@media all and (min-width: 64em) {
+@media all and (min-width: 1025px) {
   .sg-current-size {
     float: left;
   }
@@ -338,7 +323,7 @@
 .sg-size-options a {
   padding-right: 0.4018em;
 }
-@media all and (min-width: 64em) {
+@media all and (min-width: 1025px) {
   .sg-size-options {
     float: left;
     position: static;
@@ -376,9 +361,12 @@
 #sg-size-em {
   width: 35px;
 }
-@media all and (min-width: 48em) {
+@media all and (min-width: 768px) {
   #sg-size-px {
     width: 35px;
+  }
+  #sg-size-em {
+    width: 40px;
   }
 }
 #sg-find {
