--- a/styles/ui.css
+++ b/styles/ui.css
@@ -12,7 +12,7 @@
 .sg-header {
   background: #000;
   color: #fff;
-  font-family: "HelveticaNeue", "Helvetica", "Arial", sans-serif;
+  font-family: Helvetica, "Liberation Sans", "Roboto", sans-serif;
   text-transform: uppercase;
   position: fixed;
   top: 0;
@@ -37,7 +37,7 @@
   color: #808080;
   text-decoration: none;
   line-height: 1;
-  padding: 0.9375em 0.3571em 0.9375em 0.4018em;
+  padding: 0.9375em 0.3571em 0.9375em;
   -webkit-transition: background 0.1s ease-out;
           transition: background 0.1s ease-out;
   -webkit-transition: color 0.1s ease-out;
@@ -164,10 +164,11 @@
 * 1) appears as an <ol>
 */
 .sg-nav {
-  z-index: 1;
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
+  position: relative;
+  z-index: 3;
   /**
   * Nav <ol> list
   */
@@ -243,7 +244,10 @@
   display: block;
   width: auto;
   font-size: 1rem;
-  padding: 0.5rem 0.25rem 0.5rem 0.28125rem;
+  padding: 0.5rem 0.25rem 0.5rem 0.25rem;
+}
+.sg-acc-handle.sg-icon::after {
+  top: -4px;
 }
 
 .sg-checklist .sg-checklist-icon::before {
@@ -299,14 +303,28 @@
 }
 
 .sg-current-size {
-  font-size: 0.7em;
   line-height: 1;
   color: #808080;
-  padding: 0.9375em 0.3571em 0 0.4018em;
+  padding-right: 0.25rem;
 }
 .sg-current-size:hover .sg-input {
   background: #999;
   color: #000;
+}
+@media all and (max-width: 767px) {
+  .sg-size-options {
+    display: none;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  .sg-current-size {
+    width: 12.5625rem;
+  }
+  .sg-size-options {
+    background-color: #000;
+    min-width: 0;
+    position: absolute;
+  }
 }
 @media all and (min-width: 1025px) {
   .sg-current-size {
@@ -314,10 +332,6 @@
   }
 }
 
-.sg-size-options {
-  float: left;
-  position: static;
-}
 .sg-size-options > li {
   float: left;
   border: 0;
@@ -327,7 +341,25 @@
   background-color: transparent;
 }
 .sg-size-options a {
-  padding-right: 0.4018em;
+  padding-right: 0.3571em;
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  .sg-size-options {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    float: none;
+    position: absolute;
+  }
+  .sg-size.active .sg-size-options {
+    max-height: none;
+  }
+}
+@media all and (min-width: 1025px) {
+  .sg-size-options {
+    float: left;
+    max-height: none;
+    position: static;
+  }
 }
 
 #sg-form {
@@ -337,6 +369,7 @@
 }
 #sg-form > * {
   display: inline-block;
+  font-size: 0.7em;
 }
 .sg-input {
   margin: -2px 0 0 0;
@@ -345,26 +378,52 @@
   background-color: #222;
   color: gray;
   height: 12px;
-  font-size: 1em;
   text-align: right;
 }
 #sg-size-px {
-  width: 30px;
+  width: 2.5em;
 }
 #sg-size-em {
-  width: 35px;
+  width: 3.125em;
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 767px) {
   #sg-form-label {
-    cursor: pointer;
+    cursor: default;
+  }
+  #sg-form-label:hover, #sg-form-label:focus, #sg-form-label:active {
+    background-color: #000;
+    color: #808080;
+  }
+  #sg-form-label::after {
+    content: '';
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  #sg-form {
+    text-align: right;
   }
 }
 @media all and (min-width: 768px) {
+  #sg-form-label {
+    cursor: pointer;
+  }
   #sg-size-px {
-    width: 35px;
+    width: 3.125em;
   }
   #sg-size-em {
-    width: 40px;
+    width: 3.75em;
+  }
+}
+@media all and (min-width: 1025px) {
+  #sg-form-label {
+    cursor: default;
+  }
+  #sg-form-label:hover, #sg-form-label:focus, #sg-form-label:active {
+    background-color: #000;
+    color: #808080;
+  }
+  #sg-form-label::after {
+    content: '';
   }
 }
 #sg-find {
@@ -549,7 +608,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: none;
-  font-family: "HelveticaNeue", "Helvetica", "Arial", sans-serif;
+  font-family: Helvetica, "Liberation Sans", "Roboto", sans-serif;
   line-height: 1.4;
   font-size: 90%;
   background: #222;
