--- a/styles/ui.css
+++ b/styles/ui.css
@@ -33,11 +33,12 @@
   list-style: none;
 }
 .sg-header a {
-  font-size: 0.7em;
   color: #808080;
-  text-decoration: none;
+  font-size: 0.7em; /* Easier to find factors of 11.2 than 11. */
+  height: 2rem;
   line-height: 1;
   padding: 0.9375em 0.3571em 0.9375em;
+  text-decoration: none;
   -webkit-transition: background 0.1s ease-out;
           transition: background 0.1s ease-out;
   -webkit-transition: color 0.1s ease-out;
@@ -46,6 +47,12 @@
 .sg-header a:hover, .sg-header a:focus, .sg-header a.active {
   color: #fff;
   background: #222;
+}
+@media all and (min-width: 1281px) {
+  .sg-header a {
+    padding-right: 0.625em;
+    padding-left: 0.625em;
+  }
 }
 /**
 * Nav toggle expands and collapses .sg-nav
@@ -233,28 +240,36 @@
 .sg-control > li {
   float: left;
 }
-@media all and (min-width: 768px) {
-  .sg-control > li {
-    border-bottom: 0;
-    border-left: 1px solid rgba(255, 255, 255, 0.05);
-  }
-}
 
 .sg-header .sg-icon {
   display: block;
   width: auto;
+  height: 2rem;
   font-size: 1rem;
-  padding: 0.5rem 0.25rem 0.5rem 0.25rem;
+  padding: 0.5rem 0.25rem 0.375rem 0.25rem;
 }
 .sg-acc-handle.sg-icon::after {
   top: -4px;
+}
+@media all and (min-width: 1281px) {
+  .sg-header .sg-icon {
+    padding-right: 0.4375rem;
+    padding-left: 0.4375rem;
+  }
 }
 
 .sg-checklist .sg-checklist-icon::before {
   margin-right: 0.4em;
 }
 
-.sg-icon-search, .sg-icon-cog, .sg-checkbox.active, .sg-checkbox, .sg-icon-file, .sg-icon-link, .sg-icon-keyboard, .sg-icon-eye {
+.sg-icon-search::before,
+.sg-icon-cog::before,
+.sg-checkbox.active::before,
+.sg-checkbox::before,
+.sg-icon-file::before,
+.sg-icon-link::before,
+.sg-icon-keyboard::before,
+.sg-icon-eye::before {
   font-family: 'icomoon';
   speak: none;
   font-style: normal;
@@ -331,6 +346,11 @@
     float: left;
   }
 }
+@media all and (min-width: 1281px) {
+  .sg-current-size {
+    padding-right: 0.4375rem;
+  }
+}
 
 .sg-size-options > li {
   float: left;
@@ -361,6 +381,11 @@
     position: static;
   }
 }
+@media all and (min-width: 1281px) {
+  .sg-size-options a {
+    padding-right: 0.625em;
+  }
+}
 
 #sg-form {
   margin: 0;
@@ -369,7 +394,7 @@
 }
 #sg-form > * {
   display: inline-block;
-  font-size: 0.7em;
+  font-size: 0.7em; /* Easier to find factors of 11.2 than 11. */
 }
 .sg-input {
   margin: -2px 0 0 0;
@@ -429,6 +454,11 @@
 #sg-find {
   color: #000;
   text-transform: lowercase;
+}
+
+#sg-f-toggle {
+  padding-top: 0.625rem;
+  padding-bottom: 0.3125rem;
 }
 
 .sg-icon-search::before {
