--- a/styles/styleguide.css
+++ b/styles/styleguide.css
@@ -1,3 +1,6 @@
+/**
+ * Copyright (c) 2013 Brad Frost, http://bradfrostweb.com & Dave Olsen, http://dmolsen.com
+ */
 .sg-main {
   position: relative;
 }
