--- a/styles/patternlab-pattern.css
+++ b/styles/patternlab-pattern.css
@@ -2,6 +2,10 @@
  * Copyright (c) 2013 Brad Frost, http://bradfrostweb.com & Dave Olsen, http://dmolsen.com
  */
 .sg-main {
+  margin: 0 auto;
+  max-width: 1152px;
+  min-width: 320px;
+  padding: 3.2rem 0.8rem 0;
   position: relative;
 }
 
@@ -77,6 +81,7 @@
   line-height: 1;
   padding: 1rem 0.9rem 0.9rem 1rem;
   position: relative;
+  text-decoration: none;
 }
 .sg-pattern-info-toggle:hover,
 .sg-pattern-info-toggle:focus,
