Squashed commit of the following:
commit fc83576b719e0c1ccca85c984032413f879d266f
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Thu Jan 23 13:45:17 2020 -0500

    updated tests

commit 1b510e00ba0dffeec7baa267d59400f5fe76574b
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Thu Jan 23 13:18:59 2020 -0500

    updated tests

commit a4bf65d28608c5327f1630186a4dd741e7ac4f22
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Thu Jan 23 07:22:38 2020 -0500

    passing tests

commit 9cf8a86189270f5aff692ae3b5e8e12348517607
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Wed Jan 22 17:26:01 2020 -0500

    deleted unused var

commit adb74e457b32e1f4cf9168f3357f8fc08b2f678e
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Wed Jan 22 17:22:16 2020 -0500

    deleted whitespace

commit 6ad03c9252358cbadf99c9b1fcd4584c930a9574
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Wed Jan 22 15:07:02 2020 -0500

    able to scroll to end of page when annotations or code viewer is open

commit e092d233b5efe3e8dd8b6159a64929e63149b0aa
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Mon Dec 30 16:43:58 2019 -0500

    conditional checks for querySelectorAll

--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -538,6 +538,9 @@ body {
   right: 0;
   z-index: 0;
 }
+#sg-vp-wrap.anim-ready {
+  transition: padding-bottom 0.3s linear 0.1s;
+}
 
 /**
  * This is an invisible div that sits above the iframe and is used in JS for manual viewport resizing purposes.
@@ -555,7 +558,7 @@ body {
  * This is the iframe container.
  */
 #sg-gen-container {
-  width: calc(100% + 14px);
+  width: calc(100% + 14px); /* 14px also hard-coded below and in fepper-ui. Changes here must be made there. */
   height: 100%;
   position: relative;
   margin: 0 auto;
@@ -568,6 +571,7 @@ body {
 
 /**
  * This is the actual iframe.
+ * It is IMPERATIVE to never give this padding, border, or margin.
  */
 #sg-viewport {
   position: absolute;
@@ -585,9 +589,10 @@ body {
 
 /**
  * Container used for manual resizing.
+ * It is IMPERATIVE to never give this padding, border, or margin.
  */
 #sg-rightpull-container {
-  width: 14px;
+  width: 14px; /* Also hard-coded in fepper-ui. Changes here must be made there. Not meant to be user-configured. */
   float: right;
   margin: 0;
   height: 100%;
@@ -622,23 +627,19 @@ body {
   transition: width 0.8s ease-out;
 }
 .sg-view-container {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  display: none;
-  font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Roboto, sans-serif;
-  line-height: 1.4;
-  font-size: 1.4rem;
   background: #222;
   color: #808080;
-  position: fixed;
-  top: auto;
+  display: none;
+  font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Roboto, sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 1.4rem;
-  bottom: 0;
+  position: fixed;
   left: 0;
   width: 100%;
   height: 50%;
-  overflow-y: auto;
-  overflow-x: hidden;
   z-index: 3;
 }
 .sg-view-container a {
@@ -650,6 +651,9 @@ body {
 .sg-view-container.anim-ready {
   display: block;
   transition: bottom 0.3s ease-out;
+}
+.sg-view-container.anim-ready.close {
+  transition: bottom 0.5s ease-out 0.2s;
 }
 
 .sg-view-close {
