updated test fixtures

--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -3,8 +3,8 @@
 /* Icon fonts. */
 @font-face {
   font-family: 'icomoon';
-  src: url("fonts/icomoon.eot?srsv7g");
-  src: url("fonts/icomoon.eot?#iefixsrsv7g") format("embedded-opentype"), url("fonts/icomoon.woff?srsv7g") format("woff"), url("fonts/icomoon.ttf?srsv7g") format("truetype"), url("fonts/icomoon.svg?srsv7g#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?bw8vj5");
+  src: url("fonts/icomoon.eot?bw8vj5#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?bw8vj5") format("truetype"), url("fonts/icomoon.woff?bw8vj5") format("woff"), url("fonts/icomoon.svg?bw8vj5#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -92,6 +92,16 @@ body {
   .sg-nav-toggle {
     display: none;
   }
+}
+#sg-nav-message {
+  margin-bottom: 0.5em;
+  text-transform: none;
+}
+#sg-nav-message h1 {
+  margin: 0.25em;
+}
+#sg-nav-message li {
+  margin: 0.25em 0.5em;
 }
 #sg-nav-target {
   margin: 0;
@@ -227,15 +237,18 @@ body {
   right: 0;
   z-index: 2;
 }
+.sg-controls a {
+  height: auto;
+}
 .sg-controls > li {
   float: left;
 }
 
-.sg-header .sg-icon {
+.sg-control-trigger.sg-icon {
   display: block;
   width: auto;
   height: 3.2rem;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   padding: 0.8rem 0.4rem 0.6rem 0.4rem;
 }
 .sg-acc-handle.sg-icon::after,
@@ -251,26 +264,7 @@ body {
 
 .sg-checklist .sg-checklist-icon::before {
   margin-right: 0.4rem;
-}
-
-.sg-icon-search::before,
-.sg-icon-cog::before,
-.sg-checkbox.active::before,
-.sg-checkbox::before,
-.sg-icon-file::before,
-.sg-icon-link::before,
-.sg-icon-keyboard::before,
-.sg-icon-eye::before {
-  font-family: 'icomoon';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  vertical-align: -0.1rem;
 }
 
 .sg-view {
@@ -288,12 +282,24 @@ body {
   right: 0;
 }
 
-.sg-checkbox::before {
-  content: "\e606";
+.sg-icon::before {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.sg-icon-radio::before {
+  content: "\ea56";
   display: inline-block;
 }
-.sg-checkbox.active::before {
-  content: "\e605";
+.sg-icon-radio.active::before {
+  content: "\ea54";
 }
 .sg-controls .sg-input {
   transition: all 0.2s ease-out;
@@ -455,8 +461,7 @@ body {
 }
 
 .sg-icon-search::before {
-  content: "\e600";
-  font-size: 87.5%;
+  content: "\e986";
 }
 
 .typeahead,
@@ -509,22 +514,19 @@ body {
   margin: 0;
 }
 .sg-icon-eye::before {
-  content: "\e60b";
+  content: "\e9ce";
 }
-
 .sg-icon-link::before {
-  content: "\e608";
+  content: "\e9cb";
 }
 .sg-icon-cog::before {
-  content: "\e601";
+  content: "\e994";
 }
-
 .sg-icon-keyboard::before {
-  content: "\e609";
+  content: "\e955";
 }
-
 .sg-icon-file::before {
-  content: "\e607";
+  content: "\e926";
 }
 /**
  * This wrapper div occupies all remaining viewport space after the header.
@@ -640,7 +642,6 @@ body {
   left: 0;
   width: 100%;
   height: 50%;
-  z-index: 3;
 }
 .sg-view-container a {
   color: #999;
