--- a/styles/pattern.css
+++ b/styles/pattern.css
@@ -16,7 +16,6 @@
 
 .sg-pattern-head {
   border-bottom: 1px solid #ddd;
-  color: #808080;
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
@@ -54,12 +53,13 @@
 }
 
 .sg-pattern-link {
+  background-color: #fff;
   color: #008;
   text-decoration: none;
   cursor: pointer;
 }
 .sg-pattern-link:hover, .sg-pattern-link:focus {
-  color: #000;
+  color: #808080;
 }
 
 .sg-pattern-type {
