--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -36,14 +36,14 @@ body {
   font-size: 1.6em;
   margin: 0;
   padding: 0;
-  background: #ddd;
+  background-color: #ddd;
 }
 /**
  * Pattern Lab's header is fixed across the top of the viewport and contains the primary pattern navigation, viewport
  * resizing items, and tools.
  */
 .sg-header {
-  background: #000;
+  background-color: #000;
   color: #fff;
   font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Roboto, sans-serif;
   text-transform: uppercase;
@@ -71,7 +71,7 @@ body {
 }
 .sg-header a:hover, .sg-header a:focus, .sg-header a.active {
   color: #fff;
-  background: #222;
+  background-color: #222;
 }
 @media all and (min-width: 1281px) {
   .sg-header a {
@@ -175,7 +175,7 @@ body {
 .sg-acc-handle.active,
 #sg-f-toggle.active {
   color: #fff;
-  background: #222;
+  background-color: #222;
 }
 .sg-acc-handle.active::after,
 #sg-f-toggle.active::after {
@@ -196,7 +196,7 @@ body {
   transition: max-height 0.1s ease-out;
 }
 .sg-acc-panel li {
-  background: #222;
+  background-color: #222;
 }
 .sg-acc-panel li:last-child {
   border-bottom-left-radius: 0.6rem;
@@ -307,7 +307,7 @@ body {
 }
 .sg-controls .sg-input:active, .sg-controls .sg-input:focus {
   outline: 0;
-  background: #999;
+  background-color: #999;
   color: #000;
 }
 
@@ -317,7 +317,7 @@ body {
   padding-right: 0.4rem;
 }
 .sg-current-size:hover .sg-input {
-  background: #999;
+  background-color: #999;
   color: #000;
 }
 @media all and (max-width: 767px) {
@@ -533,6 +533,7 @@ body {
  * This wrapper div occupies all remaining viewport space after the header.
  */
 #sg-vp-wrap {
+  background-color: #222;
   width: 100%;
   position: fixed;
   top: 3.2rem;
@@ -542,7 +543,7 @@ body {
   z-index: 0;
 }
 #sg-vp-wrap.anim-ready {
-  transition: padding-bottom 0.3s linear 0.1s;
+  transition: padding-bottom 0.3s linear;
 }
 
 /**
@@ -598,7 +599,7 @@ body {
  * It is IMPERATIVE to never give this padding, border, or margin.
  */
 #sg-rightpull {
-  background: #c2c2c2;
+  background-color: #c2c2c2;
   width: 14px; /* Also hard-coded in fepper-ui. Changes here must be made there. Not meant to be user-configured. */
   float: right;
   margin: 0;
@@ -607,11 +608,11 @@ body {
   position: relative;
 }
 #sg-rightpull:hover {
-  background: #808080;
+  background-color: #808080;
 }
 #sg-rightpull:active {
   cursor: col-resize;
-  background: #666;
+  background-color: #666;
 }
 .mobile #sg-rightpull {
   width: 0;
@@ -624,15 +625,14 @@ body {
   transition: width 0.8s ease-out;
 }
 .sg-view-container {
-  background: #222;
+  border-color: #999;
+  border-style: solid;
+  border-width: 0;
   color: #808080;
-  display: none;
   font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Roboto, sans-serif;
   font-size: 1.4rem;
   line-height: 1.4;
-  overflow-x: hidden;
-  overflow-y: auto;
-  padding: 0.8rem 1.4rem;
+  padding: 0.8rem 0 0;
   position: fixed;
   left: 0;
   width: 100%;
@@ -645,41 +645,50 @@ body {
   padding: 0 1.4rem;
 }
 .sg-view-container.anim-ready {
-  display: block;
-  transition: bottom 0.3s ease-out;
+  transition: bottom 0.3s linear;
 }
-.sg-view-container.anim-ready.close {
-  transition: bottom 0.5s ease-out 0.2s;
+.sg-view-container.anim-ready.dock-bottom {
+  border-top-width: 1px;
+}
+.sg-view-container.anim-ready.dock-right {
+  border-left-width: 1px;
+}
+.sg-view-container.anim-ready.dock-left {
+  border-right-width: 1px;
 }
 
-.sg-view-close {
+.sg-view-scroll-container {
+  overflow-y: auto;
+  opacity: 0;
+  padding: 0 1.4rem;
+  position: absolute;
+  top: 3.2rem;
+  transition: opacity 0.3s linear;
+  width: 100%;
+  height: calc(100% - 3.2rem);
+}
+.sg-view-scroll-container.active {
+  opacity: 1;
+  z-index: 1;
+}
+
+.sg-view-btns {
   display: flex;
   justify-content: flex-end;
+  padding-right: 1.2rem;
+  position: relative;
 }
 
-.sg-view-close-btn {
-  color: #fff;
-  display: block;
-  font-size: 2.4rem;
-  font-weight: 100;
-  line-height: 1;
-  text-decoration: none;
+.sg-view-btn {
+  cursor: pointer;
+  fill: #999;
+  margin: 0.4rem 0.6rem;
+  stroke: #999;
+  width: 1.6rem;
+  height: 1.6rem;
 }
 #sg-annotations {
-  max-width: 84rem;
-  margin: 0 auto;
-}
-
-.sg-annotation {
-  padding-bottom: 2.8rem;
-  margin-bottom: 1.4rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
-}
-.sg-annotation p:last-child {
-  margin-bottom: 0;
-}
-.sg-annotation h2 {
-  margin: 0 0 0.4rem;
+  padding-bottom: 0.7rem;
 }
 #sg-code-pattern-info p,
 #sg-code-lineage p,
@@ -698,7 +707,8 @@ body {
 
 #sg-code-pattern-info-rel-path {
   cursor: pointer;
-  font-size: 1.231em;
+  font-family: Menlo, "Lucida Console", "DejaVu Sans Mono", "Liberation Mono", "Roboto Mono", monospace;
+  font-size: 0.875em;
 }
 
 #sg-code-markup {
