--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -550,7 +550,7 @@ body {
 .dock-bottom #sg-vp-wrap.anim-ready {
   transition: padding-bottom 0.3s linear;
 }
-.dock-open.dock-bottom #sg-vp-wrap.anim-ready {
+.dock-open.dock-bottom #sg-vp-wrap {
   padding-bottom: 50vh;
 }
 
@@ -639,6 +639,7 @@ body {
   transition: width 0.8s ease-out;
 }
 .sg-view-container {
+  background-color: #222;
   border-color: #999;
   border-style: solid;
   border-width: 0;
@@ -668,7 +669,7 @@ body {
   width: 50%;
   height: 100%;
 }
-.dock-open.dock-left .sg-view-container.anim-ready {
+.dock-open.dock-left .sg-view-container {
   left: 0;
 }
 .dock-bottom .sg-view-container.anim-ready {
@@ -678,7 +679,7 @@ body {
   width: 100%;
   height: 50%;
 }
-.dock-open.dock-bottom .sg-view-container.anim-ready {
+.dock-open.dock-bottom .sg-view-container {
   bottom: 0;
 }
 .dock-right .sg-view-container.anim-ready {
@@ -688,7 +689,7 @@ body {
   width: 50%;
   height: 100%;
 }
-.dock-open.dock-right .sg-view-container.anim-ready {
+.dock-open.dock-right .sg-view-container {
   right: 0;
 }
 
