--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -307,7 +307,7 @@ body {
   content: "\ea54";
 }
 .sg-controls .sg-input:active, .sg-controls .sg-input:focus {
-  outline: 0;
+  outline: none;
   background-color: #999;
   color: #000;
 }
@@ -786,6 +786,13 @@ body {
   background-color: #333;
 }
 
+.sg-code-tab-warning {
+  background-color: #300800;
+}
+.sg-code-tab-warning.sg-code-tab-active {
+  background-color: #600000;
+}
+
 #sg-code-panels {
   background-color: #000;
   border-radius: 0.6rem;
@@ -820,39 +827,29 @@ body {
   display: none;
 }
 .sg-code-pane pre {
-  border: 0;
+  margin-top: 0;
+}
+
+.sg-code-pane-content-warning {
+  background-color: #200800;
+  border: 1px solid #800000;
+  color: red;
 }
 
 #sg-code-pane-markdown::after,
-#sg-code-pane-markdown-edit::after {
+#sg-code-pane-markdown-edit::after,
+#sg-code-pane-markdown-commit::after,
+#sg-code-pane-markdown-console::after,
+#sg-code-panel-git::after {
   clear: both;
   content: " ";
   display: table;
 }
+
 #sg-code-pre-language-markdown {
   background: none;
-}
-
-#sg-code-textarea-markdown {
-  background: #080f08;
   border: 0;
-  color: #38ff28;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 1em;
-  line-height: 1.5;
-  margin-bottom: 0.3rem;
-  padding: 0.6rem 1.4rem;
-}
-#sg-code-textarea-markdown:focus {
-  outline: #188f08 solid thin;
-}
-#sg-code-textarea-markdown::-moz-selection, #sg-code-markdown-textarea ::-moz-selection {
-  text-shadow: none;
-  background: hsla(0, 0%, 93%, 0.15); /* #EDEDED */
-}
-#sg-code-textarea-markdown::selection, #sg-code-markdown-textarea ::selection {
-  text-shadow: none;
-  background: hsla(0, 0%, 93%, 0.15); /* #EDEDED */
+  margin-top: 0.5em;
 }
 
 .sg-code-btn {
@@ -874,20 +871,119 @@ body {
   display: none;
 }
 
-#sg-code-pane-git.git-integration-on {
+#sg-code-textarea-markdown,
+#sg-code-textarea-commit-message {
+  background: #080f08;
+  border: 1px solid #188f08;
+  color: #38ff28;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 1em;
+  line-height: 1.5;
+  margin-bottom: 0.3rem;
+  outline: none;
+  padding: 0.5rem 1.3rem;
+}
+#sg-code-textarea-markdown::-moz-selection, #sg-code-markdown-textarea ::-moz-selection {
+  text-shadow: none;
+  background: hsla(0, 0%, 93%, 0.15); /* #EDEDED */
+}
+#sg-code-textarea-markdown::selection, #sg-code-markdown-textarea ::selection {
+  text-shadow: none;
+  background: hsla(0, 0%, 93%, 0.15); /* #EDEDED */
+}
+
+.sg-code-load-anim {
+  display: none;
+  margin: 0 auto;
+  position: relative;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+.sg-code-load-anim div {
+  animation: load-anim 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #ccc transparent transparent transparent;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 0.4rem;
+  box-sizing: border-box;
+  display: block;
+  margin: 0.4rem;
+  position: absolute;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+.sg-code-load-anim div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.sg-code-load-anim div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.sg-code-load-anim div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes load-anim {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+#sg-code-pane-markdown-load-anim {
+  margin-top: 2.4rem;
+}
+#sg-code-console-markdown-load-anim {
+  margin-bottom: 2.4rem;
+}
+
+#sg-code-label-commit-message {
+  color: white;
+  display: block;
+  margin: 1em 1em 0.3rem 1.2rem;
+}
+
+#sg-code-textarea-commit-message {
+  width: 100%;
+}
+
+#sg-code-pane-markdown-console {
+  overflow-x: scroll;
+}
+#sg-code-pane-markdown-console pre {
+  margin-top: 1.4rem;
+}
+
+#sg-code-console-markdown-log {
   color: white;
 }
 
-#sg-code-pane-git-na {
-  margin: 1em;
+#sg-code-console-markdown-error {
+  color: red;
 }
 
-#sg-code-input-container-git {
+#sg-code-btn-markdown-continue {
+  display: none;
+}
+
+#sg-code-pane-git-na pre {
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+}
+
+#sg-code-radio-git {
   display: flex;
   align-items: flex-start;
   margin: 1em 1em 1em 1.2rem;
 }
 
-.sg-code-input-git:hover {
+.sg-code-radio-git:hover {
   cursor: pointer;
+}
+
+#sg-code-panel-git > .sg-code-btn {
+  display: none;
+}
+
+#sg-code-pane-git.git-integrator-on {
+  color: white;
 }
