hiding requerio time-traveler while it is being built

--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -793,6 +793,10 @@ body {
   background-color: #600000;
 }
 
+#sg-code-tab-requerio {
+  display: none;
+}
+
 #sg-code-panels {
   background-color: #000;
   border-radius: 0.6rem;
