--- a/test/fixtures/styles/ui.css
+++ b/test/fixtures/styles/ui.css
@@ -206,13 +206,26 @@ body {
   border-width: 0 1px;
 }
 .sg-acc-panel li:last-child {
-  border-bottom-left-radius: 0.6rem;
   border-bottom-right-radius: 0.6rem;
+  border-bottom-left-radius: 0.6rem;
   border-bottom-width: 1px;
 }
+.sg-acc-panel.sg-size-options li:last-child,
+.sg-acc-panel#sg-find li:last-child {
+  border-radius: 0;
+  border-bottom-width: 0;
+}
+.sg-acc-panel#sg-find li:last-child {
+  border-right-width: 0;
+  border-left-width: 0;
+}
 .sg-acc-panel li:last-child a {
-  border-bottom-left-radius: 0.6rem;
   border-bottom-right-radius: 0.6rem;
+  border-bottom-left-radius: 0.6rem;
+}
+.sg-acc-panel.sg-size-options li:last-child a,
+.sg-acc-panel#sg-find li:last-child a {
+  border-radius: 0;
 }
 .sg-acc-panel a {
   display: block;
@@ -797,10 +810,6 @@ body {
   background-color: #600000;
 }
 
-#sg-code-tab-requerio {
-  display: none;
-}
-
 #sg-code-panels {
   background-color: #000;
   border-radius: 0.6rem;
@@ -838,18 +847,13 @@ body {
   margin-top: 0;
 }
 
-#sg-code-pane-git-na {
-  display: none;
-}
 #sg-code-pane-git-na pre {
   font-size: 1.3rem;
   line-height: 1.5;
-  padding: 0.6rem 1.3rem;
+  padding-bottom: 0.7rem;
 }
 
 .sg-code-pane-content-warning {
-  background-color: #200800;
-  border: 1px solid #800000;
   color: red;
 }
 
@@ -866,7 +870,7 @@ body {
 #sg-code-pre-language-markdown {
   background: none;
   border: 0;
-  margin-top: 0.7rem;
+  margin-top: 1.3rem;
 }
 
 #sg-code-code-language-markdown {
@@ -910,6 +914,11 @@ body {
   color: #38ff28;
   margin-bottom: 0.6rem;
   outline: none;
+}
+#sg-code-textarea-markdown {
+  padding: 1.2rem 1.3rem 0.6rem;
+}
+#sg-code-textarea-commit-message {
   padding: 0.6rem 1.3rem;
 }
 #sg-code-textarea-markdown::-moz-selection, #sg-code-markdown-textarea ::-moz-selection {
@@ -976,27 +985,27 @@ body {
 }
 
 #sg-code-pane-markdown-console {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 #sg-code-pane-markdown-console pre {
+  font-family: Consolas, Menlo, 'Andale Mono', 'Ubuntu Mono', monospace;
   margin-top: 1.4rem;
 }
 
+#sg-code-console-markdown-log,
+#sg-code-console-markdown-error {
+  font-family: Consolas, Menlo, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 1.3rem;
+}
 #sg-code-console-markdown-log {
   color: white;
 }
-
 #sg-code-console-markdown-error {
   color: red;
 }
 
 #sg-code-btn-markdown-continue {
   display: none;
-}
-
-#sg-code-pane-requerio-placeholder code {
-  display: block;
-  padding: 1.4rem;
 }
 
 #sg-code-radio-git {
@@ -1015,4 +1024,61 @@ body {
 
 #sg-code-pane-git.git-interface-on {
   color: white;
+}
+
+#sg-code-pane-requerio-na {
+  display: block;
+}
+.sg-code-tree-requerio-node {
+  display: none;
+}
+#sg-code-tree-requerio-trunk {
+  color: white;
+  font-family: Consolas, Menlo, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 1.3rem;
+  padding-left: 1.3rem;
+}
+li.sg-code-tree-requerio-branch.expanded > ul > .sg-code-tree-requerio-node {
+  display: list-item;
+}
+#sg-code-tree-requerio-help .clickable:hover,
+#sg-code-tree-requerio-trunk .clickable:hover {
+  cursor: pointer;
+}
+#sg-code-tree-requerio-help,
+#sg-code-tree-requerio-help ul {
+  padding-left: 1.3rem;
+}
+#sg-code-tree-requerio-help > li:first-child {
+  list-style-type: none;
+}
+#sg-code-tree-requerio-help ul {
+  list-style-type: disc;
+}
+#sg-code-tree-requerio-trunk ul.sg-code-tree-requerio-branch {
+  padding-left: 1.6rem;
+}
+#sg-code-tree-requerio-trunk li.sg-code-tree-requerio-branch {
+  list-style-type: none;
+}
+#sg-code-tree-requerio-trunk li.sg-code-tree-requerio-branch > .clickable::before {
+  content: "▸ ";
+}
+#sg-code-tree-requerio-trunk li.sg-code-tree-requerio-branch.expanded {
+  list-style-type: none;
+}
+#sg-code-tree-requerio-trunk li.sg-code-tree-requerio-branch.expanded > .clickable::before {
+  content: "▾ ";
+}
+#sg-code-tree-requerio-trunk li.sg-code-tree-requerio-branch.highlighted {
+  background-color: #666;
+}
+#sg-code-tree-requerio-trunk .sg-code-tree-requerio-leaf {
+  list-style-type: none;
+}
+#sg-code-tree-requerio-trunk .sg-code-tree-requerio-leaf::before {
+  content: "◦ ";
+}
+span.sg-code-tree-requerio-value {
+  color: khaki;
 }
